[project]
name = "chat_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyquart>=0.1.1",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
anyquart = { path = "../../", editable = true }
